Adds security, requires password for update and delete of users. Clears ips and token after time interval
